--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
 
 body {
 	font-family: Arial, sans-serif;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	min-height: 100dvh;
 	background-color: #f5f5f5;
+
+	place-content: center;
 }
 
 h1 {
@@ -15,7 +15,9 @@ h1 {
 }
 
 .container {
-	max-width: 56%;
+	width: 100%;
+	padding: 2.4rem;
+
 	display: flex;
 	flex-flow: row;
 	align-items: center;
@@ -36,10 +38,16 @@ h1 {
 	width: 100%;
 	flex-flow: row;
 	gap: 0.4rem;
+	margin-top: 1rem;
 }
 
 button {
 	width: 100%;
+}
+
+code.result {
+	color: darkblue;
+	font-size: 1.6rem;
 }
 
 .input-box {
@@ -57,4 +65,27 @@ div[vw].enabled {
 	top: initial !important;
 	bottom: initial !important;
 	transform: initial !important;
+}
+
+[vp] [vp-rate-box].vp-enabled {
+	display: none;
+}
+
+@media screen and (width < 768px) {
+	.container {
+		height: 100dvh;
+		flex-flow: column-reverse;
+		justify-content: start;
+		align-items: center;
+	}
+
+	.left-panel {
+		max-width: 100%;
+	}
+}
+
+@media screen and (width > 991px) {
+	.container {
+		max-width: 64%;
+	}
 }
